added a temporary beat decoder into SW

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -22,11 +22,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from enum import IntEnum"
+    "from enum import IntEnum\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BeatDecoder:\n",
+    "    def __init__(self, initial_beat_dur = 1, cal_req = 0,  beat_error = 0.15):\n",
+    "        self.beat_duration = initial_beat_dur\n",
+    "        self.num_of_bits = 0\n",
+    "        self.bit = 0\n",
+    "        self.calibrated = False\n",
+    "        self.beat_error = beat_error\n",
+    "        self.closely_calibrated = 0\n",
+    "        self.calibrate_goal = cal_req\n",
+    "\n",
+    "    def get_beat(self):\n",
+    "        return self.beat_duration\n",
+    "\n",
+    "    def has_calibrated(self) -> bool:\n",
+    "        return self.calibrated\n",
+    "\n",
+    "    '''\n",
+    "    Calibrates the beat decoder and then outputs that to the hardware\n",
+    "    '''\n",
+    "    def calibrate_beat(self, bit) -> bool:\n",
+    "        if bit == self.bit:\n",
+    "            self.num_of_bits += 1\n",
+    "        else:\n",
+    "            offset = self.num_of_bits - self.beat_duration / self.beat_duration\n",
+    "            if math.abs(offset) > 0.15:\n",
+    "                self.beat_duration = (self.num_of_bits + self.beat_duration) // 2\n",
+    "            else:\n",
+    "                self.beat_duration *= 1 + (offset / self.closely_calibrated)\n",
+    "                self.closely_calibrated += 1\n",
+    "\n",
+    "                if not self.calibrated and self.close_calibrated > self.calibrate_goal:\n",
+    "                    self.calibrated = True\n",
+    "\n",
+    "            self.bit = bit\n",
+    "            self.num_of_bits = 0"
    ]
   },
   {
@@ -47,6 +91,7 @@
     "        self.beat_duration = 1 # How many bits is a beat?\n",
     "        self.prev_bit = 0 # The value of the previous bit\n",
     "        self.num_of_bit = 0 # The number of occurrences of \"prev bit\"\n",
+    "        self.buffer = list()\n",
     "\n",
     "    '''\n",
     "    Initializes the machine\n",
@@ -117,7 +162,8 @@
     "                return duration\n",
     "\n",
     "        return -1\n",
-    "    \n",
+    "\n",
+    "\n",
     "    '''\n",
     "    Processes some parsed information and interacts with the \"letter\" state machine\n",
     "\n",
@@ -255,10 +301,12 @@
     "        self.recv_channel = self.overlay.processNextBit.axi_dma.recvchannel\n",
     "\n",
     "        self.stream_buf_size = stream_buf_size\n",
-    "        self.bit_list = []\n",
+    "        self.buffer = []\n",
+    "        self.beat_duration = 0\n",
     "\n",
     "    def process(self, in_bits, recv_chars):\n",
     "        # decoder.start()\n",
+    "        # TODO: pass in the beat_duration\n",
     "        self.send_channel.start()\n",
     "        self.recv_channel.start()\n",
     "        self.send_channel.transfer(in_bits)\n",
@@ -267,28 +315,35 @@
     "        self.recv_channel.wait()\n",
     "        \n",
     "        return recv_chars\n",
-    "    \n",
+    "\n",
+    "    def adjust_factor(self):\n",
+    "        pass\n",
+    "\n",
+    "    def det_beat_dur(self):\n",
+    "        pass\n",
+    "\n",
     "    def process_next_bit(self, bit, finalize = False):\n",
-    "        if finalize or len(self.bit_list) == self.stream_buf_size:\n",
-    "            list_capacity = len(self.bit_list)\n",
+    "        if finalize or len(self.buffer) == self.stream_buf_size:\n",
+    "            list_capacity = len(self.buffer)\n",
     "\n",
     "            in_bits = allocate(shape=(list_capacity,), dtype=np.uint32)\n",
     "            recv_chars = allocate(shape=(list_capacity,), dtype=np.uint32)\n",
     "            \n",
-    "            in_bits[:] = self.bit_list[:]\n",
+    "            in_bits[:] = self.buffer[:]\n",
     "            print(\"in_bits\", in_bits)\n",
     "            output = self.process(in_bits, recv_chars)\n",
     "            print(\"output\", output)\n",
     "            \n",
     "            a_offset = ord('a')\n",
-    "            letter_list = [(chr(letter+a_offset-1) if letter else ' ') for letter in recv_chars]\n",
+    "            letter_list = [(chr(letter+a_offset-1) if letter else ' ') for letter in recv_chars if letter != 31]\n",
     "            return_letter = ''.join(letter_list)\n",
-    "            self.bit_list = []\n",
+    "            self.buffer = []\n",
     "            del in_bits, recv_chars\n",
     "            \n",
     "            return return_letter\n",
     "        else:\n",
-    "            self.bit_list.append(bit)\n",
+    "            # TODO: what to do about the 100th thing being in the middle of letters\n",
+    "            self.buffer.append(bit)\n",
     "\n",
     "    def finalize_hw(self):\n",
     "        return self.process_next_bit(0, finalize = True)"
