--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -296,19 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydub import AudioSegment\n",
     "import numpy as np\n",
     "import scipy.signal as signal\n",
-    "import math"
+    "from scipy.signal import iirfilter, freqz,butter,filtfilt\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +320,12 @@
     "        self.sample_rate = sample_rate\n",
     "\n",
     "    def transform(self) -> tuple[float, float, float]:\n",
-    "        fft_result = np.fft.fft(self.signal_data, self.sample_rate)\n",
+    "        fft_result = np.fft.fft(self.signal_data)\n",
+    "        fft_magnitude = np.abs(fft_result)\n",
     "        freqs = np.fft.fftfreq(len(self.signal_data), 1/self.sample_rate)\n",
     "\n",
-    "        max_freq_index = np.argmax(fft_result)\n",
-    "        self.max_freq = freqs[max_freq_index]  \n",
+    "        max_freq_index = np.argmax(fft_magnitude)\n",
+    "        self.max_freq = freqs[max_freq_index]\n",
     "\n",
     "        theshold = 0.1 * self.max_freq\n",
     "\n",
@@ -331,7 +334,7 @@
     "\n",
     "        # print(lower_bound, upper_bound)\n",
     "\n",
-    "        self.bandwidth = freqs[upper_bound] - freqs[lower_bound]\n",
+    "        self.bandwidth = 300\n",
     "        \n",
     "        # print(freqs[lower_bound], freqs[upper_bound])\n",
     "        \n",
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +363,10 @@
     "        self.fft = fft\n",
     "\n",
     "    def gen_coef(self, num_coef: int, sample_rate: int, max_freq: float, bandwidth: float) -> list:\n",
-    "        lower_cutoff = max_freq - bandwidth / 2\n",
-    "        upper_cutoff = max_freq + bandwidth / 2\n",
+    "        nyquist_freq = sample_rate/2.0\n",
+    "        lower_cutoff = (max_freq - bandwidth / 2)/nyquist_freq\n",
+    "        upper_cutoff = (max_freq + bandwidth / 2)/nyquist_freq\n",
+    "        \n",
     "\n",
     "        coefficients = list()\n",
     "\n",
@@ -376,20 +381,27 @@
     "                             - math.sin(2 * math.pi * lower_cutoff * t)) / (math.pi * t)\n",
     "                \n",
     "            coefficients.append(next_coef)\n",
+    "       \n",
     "\n",
     "        return coefficients\n",
     "\n",
-    "\n",
+    "    \n",
     "    def filter(self, unfiltered: list, sample_rate: int):\n",
+    "        \n",
     "        fft = self.fft(unfiltered, sample_rate)\n",
     "        sampling_rate, max_freq, bandwidth = fft.transform()\n",
-    "    \n",
+    "        lower_cutoff = (max_freq - bandwidth / 2)\n",
+    "        upper_cutoff = (max_freq + bandwidth / 2)\n",
     "        print(sampling_rate, max_freq, bandwidth)\n",
+    "        \n",
     "\n",
     "        # Bandwidth/ sampling_rate = num_of_coefs?\n",
     "        # Bandwidth is pretty specific, so maybe keep it at a hard like 11?\n",
     "        num_of_coefs = 200\n",
     "        coefficients = self.gen_coef(num_of_coefs, sampling_rate, max_freq, bandwidth)\n",
+    "        \n",
+    "        \n",
+    "\n",
     "\n",
     "        print(coefficients)\n",
     "\n",
@@ -412,32 +424,95 @@
     "\n",
     "            filtered.append(accumulator)\n",
     "\n",
-    "        return np.array(filtered)"
+    "        return np.array(filtered)\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44100 29.08092380798969 0.2774897309922686\n",
-      "[0.5084813494448011, 0.5093983419718408, 0.5103065895355428, 0.511206076543311, 0.5120967875529419, 0.5129787072728806, 0.5138518205625183, 0.514716112432432, 0.5155715680446328, 0.51641817271283, 0.5172559119027041, 0.5180847712321023, 0.5189047364713435, 0.5197157935434478, 0.5205179285243343, 0.5213111276431274, 0.5220953772823331, 0.522870663978116, 0.5236369744205176, 0.5243942954536832, 0.5251426140760659, 0.525881917440705, 0.5266121928553565, 0.5273334277828164, 0.528045609841084, 0.5287487268035482, 0.5294427665992434, 0.5301277173130073, 0.5308035671857937, 0.5314703046147136, 0.5321279181533608, 0.5327763965119603, 0.5334157285575646, 0.5340459033142685, 0.5346669099633004, 0.5352787378434114, 0.5358813764508114, 0.5364748154395471, 0.5370590446215879, 0.5376340539669526, 0.5381998336040508, 0.5387563738196613, 0.5393036650592328, 0.5398416979269534, 0.5403704631859982, 0.5408899517586169, 0.5414001547263403, 0.5419010633301077, 0.5423926689704228, 0.5428749632074831, 0.5433479377613714, 0.5438115845121345, 0.5442658954999959, 0.5447108629254267, 0.5451464791493122, 0.5455727366930813, 0.5459896282388232, 0.5463971466294335, 0.5467952848687136, 0.547184036121495, 0.5475633937137923, 0.5479333511328383, 0.5482939020273224, 0.5486450402073157, 0.5489867596446115, 0.5493190544725939, 0.5496419189865024, 0.5499553476434685, 0.5502593350626108, 0.5505538760251066, 0.5508389654743688, 0.5511145985160103, 0.5513807704180426, 0.551637476610848, 0.5518847126873663, 0.5521224744030959, 0.55235075767618, 0.5525695585875217, 0.5527788733807354, 0.5529786984624029, 0.5531690304019327, 0.5533498659317502, 0.5535212019473094, 0.5536830355071434, 0.5538353638329356, 0.553978184309532, 0.5541114944850174, 0.554235292070741, 0.5543495749413925, 0.5544543411349689, 0.5545495888528887, 0.554635316459919, 0.5547115224843204, 0.5547782056178093, 0.5548353647155952, 0.5548829987963463, 0.5549211070423218, 0.5549496887992659, 0.5549687435765153, 0.5549782710469233, 0.5549782710469233, 0.5549687435765153, 0.5549496887992659, 0.5549211070423218, 0.5548829987963463, 0.5548353647155952, 0.5547782056178093, 0.5547115224843204, 0.554635316459919, 0.5545495888528887, 0.5544543411349689, 0.5543495749413925, 0.554235292070741, 0.5541114944850174, 0.553978184309532, 0.5538353638329356, 0.5536830355071434, 0.5535212019473094, 0.5533498659317502, 0.5531690304019327, 0.5529786984624029, 0.5527788733807354, 0.5525695585875217, 0.55235075767618, 0.5521224744030959, 0.5518847126873663, 0.551637476610848, 0.5513807704180426, 0.5511145985160103, 0.5508389654743688, 0.5505538760251066, 0.5502593350626108, 0.5499553476434685, 0.5496419189865024, 0.5493190544725939, 0.5489867596446115, 0.5486450402073157, 0.5482939020273224, 0.5479333511328383, 0.5475633937137923, 0.547184036121495, 0.5467952848687136, 0.5463971466294335, 0.5459896282388232, 0.5455727366930813, 0.5451464791493122, 0.5447108629254267, 0.5442658954999959, 0.5438115845121345, 0.5433479377613714, 0.5428749632074831, 0.5423926689704228, 0.5419010633301077, 0.5414001547263403, 0.5408899517586169, 0.5403704631859982, 0.5398416979269534, 0.5393036650592328, 0.5387563738196613, 0.5381998336040508, 0.5376340539669526, 0.5370590446215879, 0.5364748154395471, 0.5358813764508114, 0.5352787378434114, 0.5346669099633004, 0.5340459033142685, 0.5334157285575646, 0.5327763965119603, 0.5321279181533608, 0.5314703046147136, 0.5308035671857937, 0.5301277173130073, 0.5294427665992434, 0.5287487268035482, 0.528045609841084, 0.5273334277828164, 0.5266121928553565, 0.525881917440705, 0.5251426140760659, 0.5243942954536832, 0.5236369744205176, 0.522870663978116, 0.5220953772823331, 0.5213111276431274, 0.5205179285243343, 0.5197157935434478, 0.5189047364713435, 0.5180847712321023, 0.5172559119027041, 0.51641817271283, 0.5155715680446328, 0.514716112432432, 0.5138518205625183, 0.5129787072728806, 0.5120967875529419, 0.511206076543311, 0.5103065895355428, 0.5093983419718408, 0.5084813494448011]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "audio = AudioSegment.from_file('SOS.mp3')\n",
+    "class SWAudioFilter_test:\n",
+    "    def __init__(self, fft: FFT = FFT) -> None:\n",
+    "        self.fft = fft\n",
+    "\n",
+    "    #def design_morse_bandpass_filter(self, sample_rate):\n",
+    "        # Define frequency range for Morse code signals (approximate)\n",
+    "        #low_freq = 300  # Frequency for dots\n",
+    "        #high_freq = 525  # Frequency for dashes\n",
+    "        #bandwidth = 300  # Adjust as needed\n",
+    "\n",
+    "        # Normalize frequencies\n",
+    "        #low_cutoff = low_freq / (sample_rate / 2)\n",
+    "        #high_cutoff = high_freq / (sample_rate / 2)\n",
+    "\n",
+    "        # Design a bandpass filter\n",
+    "        #b, a = butter(4, [low_cutoff, high_cutoff], btype='band')\n",
+    "        #return b, a\n",
+    "\n",
+    "    #def filter(self, unfiltered: list, sample_rate: int):\n",
+    "        #fft = self.fft(unfiltered, sample_rate)\n",
+    "        #sampling_rate, max_freq, bandwidth = fft.transform()\n",
+    "        #print(max_freq)\n",
+    "        #lower_cutoff = (max_freq - bandwidth / 2)\n",
+    "        #pper_cutoff = (max_freq + bandwidth / 2)\n",
+    "        #b, a = self.design_morse_bandpass_filter(sample_rate)\n",
+    "        #filtered = filtfilt(b, a, unfiltered)\n",
+    "        #return filtered\n",
+    "    \n",
+    "    def generate_bandpass_filter(self,fs, lowcut, highcut, num_taps):\n",
+    "        nyquist = 0.5 * fs\n",
+    "        low = lowcut / nyquist\n",
+    "        high = highcut / nyquist\n",
+    "\n",
+    "        taps = np.zeros(num_taps)\n",
+    "        for i in range(num_taps):\n",
+    "            if i - num_taps / 2 == 0:\n",
+    "                taps[i] = 2 * (high - low)\n",
+    "            else:\n",
+    "                taps[i] = (np.sin(2 * np.pi * high * (i - num_taps / 2)) - np.sin(2 * np.pi * low * (i - num_taps / 2))) / (np.pi * (i - num_taps / 2))\n",
+    "    \n",
+    "        return taps\n",
+    "\n",
+    "    def apply_filter(self,signal, filter_taps):\n",
+    "        num_taps = len(filter_taps)\n",
+    "        filtered_signal = np.convolve(signal, filter_taps, mode='same')\n",
+    "        return filtered_signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio = AudioSegment.from_file('sos.mp3')\n",
     "sample_rate = audio.frame_rate\n",
     "signal_data = np.array(audio.get_array_of_samples())\n",
-    "filter = SWAudioFilter(FFT)\n",
-    "filtered = filter.filter(signal_data, sample_rate)\n",
+    "filter = SWAudioFilter_test(FFT)\n",
+    "#filtered = filter.filter(signal_data, sample_rate)\n",
+    "\n",
+    "# Sample rate and desired cutoff frequencies (in Hz)  # Sample rate\n",
+    "lowcut = 300.0  # Low cutoff frequency\n",
+    "highcut = 500.0  # High cutoff frequency\n",
+    "\n",
+    "# Generate bandpass filter coefficients\n",
+    "num_taps = 4  # Filter length\n",
+    "t = np.linspace(0, 1, int(sample_rate), endpoint=False)\n",
+    "filter_taps = filter.generate_bandpass_filter(sample_rate, lowcut, highcut, num_taps)\n",
+    "\n",
+    "# Apply bandpass filter\n",
+    "filtered_data = filter.apply_filter(signal_data, filter_taps)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "from scipy.io.wavfile import write\n",
-    "write('filtered_sos.wav', sample_rate, filtered)"
+    "write('filtered_sos.wav', sample_rate, filtered_data)"
    ]
   },
   {
@@ -722,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
