added a mock decoder to test for single inputs

--- a/decoder.ipynb
+++ b/decoder.ipynb
@@ -102,6 +102,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class MockDecoder(BeatDecoder):\n",
+    "    def get_beat(self):\n",
+    "        return 1\n",
+    "    def has_calibrated(self):\n",
+    "        return True\n",
+    "    def get_calibrated(self):\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "'''\n",
     "Test the beat decoder\n",
     "'''\n",
@@ -466,7 +481,7 @@
     "                    return self.process_wrapping() + ' '\n",
     "\n",
     "    def finalize(self):\n",
-    "        return self.process_next_bit(0, finalize = True)"
+    "        return self.process_wrapping()"
    ]
   },
   {
@@ -700,13 +715,11 @@
     "# ------------------------------------------------------\n",
     "# Translation\n",
     "# ------------------------------------------------------\n",
-    "def translate(input_file, out = None, decoder_cls: Decoder = SWDecoder):\n",
+    "def translate(input_file, out = None, decoder: Decoder = SWDecoder()):\n",
     "    if out is None:\n",
     "        stdout = sys.stdout\n",
     "    else:\n",
     "        stdout = open(out, \"w\")\n",
-    "\n",
-    "    decoder = decoder_cls()\n",
     "\n",
     "    with open(input_file, \"r\") as in_file:\n",
     "        decoder.init_letters()\n",
@@ -857,7 +870,7 @@
    "outputs": [],
    "source": [
     "def testA_hw():\n",
-    "    translate_test(\"decoder_tests/untitled.txt\", \"decoder_tests/untitled1.txt\", time_it = True, decoder_cls = HWDecoder)\n",
+    "    translate_test(\"decoder_tests/untitled.txt\", \"decoder_tests/untitled1.txt\", time_it = True, decoder_cls = HWDecoder(overlay))\n",
     "testA_hw()"
    ]
   },
@@ -868,7 +881,7 @@
    "outputs": [],
    "source": [
     "def test1_hw():\n",
-    "    translate_test(\"decoder_tests/test1.txt\", \"decoder_tests/golden_out1.txt\", time_it = True, decoder_cls = HWDecoder)\n",
+    "    translate_test(\"decoder_tests/test1.txt\", \"decoder_tests/golden_out1.txt\", time_it = True, decoder = HWDecoder(overlay))\n",
     "    \n",
     "test1_hw()"
    ]
